--- a/index.html
+++ b/index.html
@@ -507,8 +507,8 @@
                     </div>
                     <div class="about-body" data-aos="fade-up" data-aos-duration="3000">
                         <h3 class="bride_name"> Thu Hiền</h3>
-                        <p class="bride_birthday">
-                           Cô dâu hướng nội, thích nấu nướng và rất đảm đang </p>
+                    <!--     <p class="bride_birthday">
+                           Cô dâu hướng nội, thích nấu nướng và rất đảm đang </p> -->
                         
                     </div>
                 </div>
@@ -518,8 +518,8 @@
                     </div>
                     <div class="about-body" data-aos="fade-up" data-aos-duration="3000">
                         <h3 class="groom_name">Mạnh Tuấn</h3>
-                        <p class="groom_birthday">
-                            Chú rể hướng ngoại, thích khám phá và đi du lịch </p>
+                       <!--  <p class="groom_birthday">
+                            Chú rể hướng ngoại, thích khám phá và đi du lịch </p> -->
                         
                     </div>
                 </div>
